Fix text vertical alignement in keyboard shortcuts popup
Addresses RM-42926

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -914,6 +914,10 @@ img.prefix-icon {
   text-align: left;
 }
 
+.keyboard-shortcuts tbody {
+  vertical-align: text-top;
+}
+
 .keyboard-shortcuts kbd {
   display: inline-block;
   font-size: 10px;
